LIU-534: Change directory to daliuge-engine

--- a/.github/workflows/run-examples.yml
+++ b/.github/workflows/run-examples.yml
@@ -34,4 +34,5 @@ jobs:
 
       - name: Process all files
         run: |
+          cd daliuge-engine/
           ./compatibility_runner.sh external-data-repo
