LIU-534: Refer to directory that actually exists

--- a/.github/workflows/run-examples.yml
+++ b/.github/workflows/run-examples.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Process all files
         run: |
           cd daliuge-engine/
-          ./compatibility_runner.sh external-data-repo
+          ./compatibility_runner.sh dlg-reference-graphs
