--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -18,6 +18,7 @@ jobs:
           - python-version: "3.10"
           - python-version:  "3.11"
           - python-version:  "3.12"
+          - python-version:  "3.13"
     steps:
       - uses: actions/checkout@v4
 
@@ -57,7 +58,7 @@ jobs:
           - python-version: "3.10"
           - python-version:  "3.11"
           - python-version:  "3.12"
-
+          - python-version:  "3.13"
     steps:
       - uses: actions/checkout@v4
 
@@ -97,7 +98,7 @@ jobs:
           - python-version: "3.10"
           - python-version:  "3.11"
           - python-version:  "3.12"
-
+          - python-version:  "3.13"
     steps:
       - uses: actions/checkout@v4
 
