LIU-519: Show capture for debug
Signed-off-by: Ryan Bunney <ryanbunney@fastmail.com>

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -123,7 +123,7 @@ jobs:
 
       - name: Run tests
         run: |
-          py.test daliuge-engine/test/end_to_end/ --cov --show-capture=no
+          py.test daliuge-engine/test/end_to_end/ --cov --show-capture=yes
 
 
       - name: Update to coveralls
