--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          py.test daliuge-engine/test/ --cov --show-capture=no
+          py.test daliuge-engine/test/manager/test_dm.py --cov --show-capture=no --full-trace
 
       - name: Update to coveralls
         env:
@@ -123,7 +123,7 @@ jobs:
 
       - name: Run tests
         run: |
-          py.test daliuge-engine/test/end_to_end/data/test_memory.py --cov --show-capture=all
+          py.test daliuge-engine/test/end_to_end/ --cov --show-capture=all 
 
 
       - name: Update to coveralls
