LIU-519: Reset tests
Signed-off-by: Ryan Bunney <ryanbunney@fastmail.com>

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          py.test daliuge-engine/test/manager/test_dm.py --cov --show-capture=no --full-trace
+          py.test daliuge-engine/test/ --cov --show-capture=no --full-trace
 
       - name: Update to coveralls
         env:
